--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.42", features = ["derive"] }
 nanoid = "0.4.0"
+serde = "1.0.219"
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
 tokio = { version = "1.47.1", features = ["full"] }
