--- a/finance_cli/Cargo.toml
+++ b/finance_cli/Cargo.toml
@@ -9,3 +9,6 @@ clap = { version = "4.5.42", features = ["derive"] }
 tabled = "0.20.0"
 tokio = { version = "1.47.1", features = ["full"] }
 chrono = "0.4.41"
+comfy-table = "7.2.0"
+indicatif = "0.18.0"
+dialoguer = "0.12.0"
