--- a/invoice_manager/Cargo.toml
+++ b/invoice_manager/Cargo.toml
@@ -3,6 +3,10 @@ name = "invoice_manager"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+dev = []
+
 [dependencies]
 chrono = "0.4.41"
 clap = { version = "4.5.42", features = ["derive"] }
@@ -12,3 +16,4 @@ sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "
 tokio = { version = "1.47.1", features = ["full"] }
 num-format = "0.4.4"
 directories = "6.0.0"
+toml = "0.9.5"
