--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all
 
-devdb.*
+devdb.sqlite
+config.dev.toml
