lets give this a shot

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
-
-      - name: Build for macOS ARM64
-        run: cargo build --release --locked --target aarch64-apple-darwin
+          target: aarch64-apple-darwin
 
       - name: Decode signing certificate (macOS)
         shell: bash
@@ -39,37 +37,35 @@ jobs:
           security import signing_cert.p12 -k build.keychain -P "${{ secrets.MAC_CERT_P12_PASSWORD }}" -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple: -s -k temp build.keychain
 
-      - name: Build (macOS arm64)
+      - name: Build and sign for macOS ARM64
         shell: bash
         env:
           SIGN_IDENTITY: ${{ secrets.SIGN_IDENTITY }}
         run: |
+          # Build for ARM64
+          cargo build --release --locked --target aarch64-apple-darwin
           # Codesign the binary
           codesign --sign "$SIGN_IDENTITY" target/aarch64-apple-darwin/release/finance_tracker
           # Verify signature
           codesign --verify --verbose target/aarch64-apple-darwin/release/finance_tracker
-          # Package tarball for Homebrew distribution
+          # Package tarball
           mkdir -p dist
           cp target/aarch64-apple-darwin/release/finance_tracker dist/finance_tracker
           tar -C dist -czf finance_tracker-${{ github.ref_name }}-darwin-arm64.tar.gz finance_tracker
           rm -rf dist
 
-
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: finance_tracker-${{ matrix.os }}
+          name: finance_tracker-macos
           path: |
-            finance_tracker-${{ github.ref_name }}-darwin-arm64.tar.gz
-          if-no-files-found: ignore
+            finance_tracker-${{ github.ref_name }}-darwin-*.tar.gz
+          if-no-files-found: error
 
-      - name: Create GitHub Release (macOS)
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            finance_tracker-${{ github.ref_name }}-darwin-arm64.tar.gz
+            finance_tracker-${{ github.ref_name }}-darwin-*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-
