--- a/finance_tracker/Cargo.toml
+++ b/finance_tracker/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.2.0"
 edition = "2024"
 
 [dependencies]
+clap = { workspace = true }
+chrono = { workspace = true }
+utilities = { workspace = true }
 invoice_manager = {path = "../invoice_manager"}
-clap = { version = "4.5.42", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
-chrono = "0.4.41"
 comfy-table = "7.2.0"
-indicatif = "0.18.0"
 dialoguer = "0.12.0"
-args = "2.2.0"
