--- a/double_entry_bookkeeping/Cargo.toml
+++ b/double_entry_bookkeeping/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = "0.4.41"
+utilities = { workspace = true }
+chrono = { workspace = true }
+clap = { workspace = true }
