moving sqlx to the workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ members = [
 [workspace.dependencies]
 chrono = "0.4.41"
 clap = { version = "4.5.42", features = ["derive"] }
+sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
 utilities = { path = "utilities" }
