--- a/finance_tracker/Cargo.toml
+++ b/finance_tracker/Cargo.toml
@@ -9,6 +9,7 @@ chrono = { workspace = true }
 utilities = { workspace = true }
 sqlx = { workspace = true }
 invoice_manager = {path = "../invoice_manager"}
+# double_entry_bookkeeping = {path = "../double_entry_bookkeeping"}
 tokio = { version = "1.47.1", features = ["full"] }
 comfy-table = "7.2.0"
 dialoguer = "0.12.0"
