--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ members = [
 chrono = "0.4.41"
 clap = { version = "4.5.42", features = ["derive"] }
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
+serde = { version = "1.0.219", features = ["derive"] }
 utilities = { path = "utilities" }
