--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 clap = { workspace = true }
 chrono = { workspace = true }
+serde = { workspace = true }
 nanoid = "0.4.0"
