im not sure about that feature set, but now im my database module i am running bolth sets of migrations, i need to figure out what db im running and only run thoes migrations, i feel like i was doing this earlier

--- a/finance_tracker/Cargo.toml
+++ b/finance_tracker/Cargo.toml
@@ -3,6 +3,10 @@ name = "finance_tracker"
 version = "0.2.0"
 edition = "2024"
 
+[features]
+default = []
+dev = []
+
 [dependencies]
 clap = { workspace = true }
 chrono = { workspace = true }
