--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ clap = { version = "4.5.42", features = ["derive"] }
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
 serde = { version = "1.0.219", features = ["derive"] }
 utilities = { path = "utilities" }
+
+
+[workspace.metadata.features]
+default = []
+dev = []
