unit testing is starting to happen

--- a/double_entry_bookkeeping/Cargo.toml
+++ b/double_entry_bookkeeping/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-utilities = { workspace = true }
-chrono = { workspace = true }
 clap = { workspace = true }
 sqlx = { workspace = true }
+
+[dev-dependencies]
+tokio = { workspace = true }
