--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.5.42", features = ["derive"] }
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
 serde = { version = "1.0.219", features = ["derive"] }
 utilities = { path = "utilities" }
+tokio = { version = "1.47.1", features = ["full"] }
 
 
 [workspace.metadata.features]
